--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			http-equiv="Content-Security-Policy"
-			content="default-src 'self'; script-src 'self'"
-		/>
-		<title>Hello World!</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 	</head>
-	<body>
-		<script src="./renderer.mjs"></script>
-	</body>
+	<body></body>
 </html>
