Add handler for create task form, update preload, tsconfig

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="create-task-container">
-			<form id="task-form">
+			<form id="create-task-form">
 				<div class="form-group">
 					<label for="task-name">Task Name:</label>
 					<input
