Add webpack for renderer scripts

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 				Tasks list
 			</ul>
 		</div>
-		<script src="./dist/renderer/index.js"></script>
+		<script src="./dist/bundle.js"></script>
 	</body>
 </html>
